--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <h1>Welcome to the Weather App</h1>
-    <footer>Coded by Sarah</footer>
+    <footer>
+      Coded by <a href="https://github.com/sarahvue" target="_blank">Sarah</a>,
+      code hosted on
+      <a href="https://github.com/sarahvue/weatherapplication" target="_blank"
+        >Github</a
+      >
+      and website hosted on
+      <a href="https://weatherapplicationsv.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
