updated footer content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Coded by <a href="https://github.com/sarahvue" target="_blank">Sarah</a>,
       code hosted on
       <a href="https://github.com/sarahvue/weatherapplication" target="_blank"
-        >Github</a
+        >Github,</a
       >
       and website hosted on
       <a href="https://weatherapplicationsv.netlify.app/" target="_blank"
