Added html to project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Weather Application</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a City..." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 8:00, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12&degC</div>
+    </main>
     <footer>
       Coded by <a href="https://github.com/sarahvue" target="_blank">Sarah</a>,
       code hosted on
