--- a/index.html
+++ b/index.html
@@ -3,36 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather Application</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a City..." required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 8:00, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌤️ 12&degC</div>
-    </main>
-    <footer>
-      Coded by <a href="https://github.com/sarahvue" target="_blank">Sarah</a>,
-      code hosted on
-      <a href="https://github.com/sarahvue/weatherapplication" target="_blank"
-        >Github,</a
-      >
-      and website hosted on
-      <a href="https://weatherapplicationsv.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a City..." required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 8:00, scattered clouds
+            <br />
+            Humidity: 66%, Wind: 3.13 km/h
+          </p>
+        </div>
+        <div>🌤️ 12&degC</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/sarahvue" target="_blank">Sarah</a>, code
+        hosted on
+        <a href="https://github.com/sarahvue/weatherapplication" target="_blank"
+          >Github,</a
+        >
+        and website hosted on
+        <a href="https://weatherapplicationsv.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
