Added additional weather data

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
           <div>
             <h1 class="city" id="city"></h1>
             <p class="weather-details">
-              Tuesday 8:00, scattered clouds
+            <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temp-container">
             <div class="weather-icon">
-            🌤️
         </div> 
         <div class="temperature" id="temperature">
             </div>
