added icon behavior

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
           </div>
           <div class="weather-temp-container">
-            <div class="weather-icon">
+            <div id="icon">
         </div> 
         <div class="temperature" id="temperature">
             </div>
