added forecast html

--- a/index.html
+++ b/index.html
@@ -32,17 +32,79 @@
           <div>
             <h1 class="city" id="city"></h1>
             <p class="weather-details">
-            <span id="time"></span>, <span id="description"></span>
+              <span id="time"></span>, <span id="description"></span>
               <br />
-              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temp-container">
-            <div id="icon">
-        </div> 
-        <div class="temperature" id="temperature">
-            </div>
+            <div id="icon"></div>
+            <div class="temperature" id="temperature"></div>
             <div class="weather-unit">&deg;F</div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp">
+                <span class="bold">15&deg</span>
+              </div>
+              <div class="weather-forecast-temp">9&deg</div>
+            </div>
+          </div>
         </div>
       </main>
       <footer>
