Updated HTML and Javascript behavior

--- a/index.html
+++ b/index.html
@@ -44,68 +44,7 @@
             <div class="weather-unit">&deg;F</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp">
-                <span class="bold">15&deg</span>
-              </div>
-              <div class="weather-forecast-temp">9&deg</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         Coded by
